; ModuleID = '/home/carl/AnghaBench/php-src/ext/soap/extr_php_encoding.c_guess_xml_convert.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/soap/extr_php_encoding.c_guess_xml_convert.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IS_NULL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32, i32)* @guess_xml_convert to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @guess_xml_convert(i32 %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load i32*, i32** %6, align 8
  %12 = icmp ne i32* %11, null
  br i1 %12, label %13, label %17

13:                                               ; preds = %4
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @Z_TYPE_P(i32* %14)
  %16 = call i32 @get_conversion(i32 %15)
  store i32 %16, i32* %9, align 4
  br label %20

17:                                               ; preds = %4
  %18 = load i32, i32* @IS_NULL, align 4
  %19 = call i32 @get_conversion(i32 %18)
  store i32 %19, i32* %9, align 4
  br label %20

20:                                               ; preds = %17, %13
  %21 = load i32, i32* %9, align 4
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @master_to_xml_int(i32 %21, i32* %22, i32 %23, i32 %24, i32 0)
  store i32 %25, i32* %10, align 4
  %26 = load i32, i32* %10, align 4
  ret i32 %26
}

declare dso_local i32 @get_conversion(i32) #1

declare dso_local i32 @Z_TYPE_P(i32*) #1

declare dso_local i32 @master_to_xml_int(i32, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
